@@ -1,0 +1,49 @@
+{
+    "id": "fidwell.scenery_small.sumrf",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "0A188C01|COLROOF6|E0D79F16",
+    "sourceGame": "rct2",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 21,
+        "removalPrice": -15,
+        "cursor": "CURSOR_HOUSE_DOWN",
+        "height": 32,
+        "shape": "4/4",
+        "SMALL_SCENERY_FLAG_VOFFSET_CENTRE": true,
+        "requiresFlatSurface": true,
+        "isStackable": true,
+        "prohibitWalls": true,
+        "hasNoSupports": true,
+        "hasPrimaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -32, "y": -19 },
+      { "path": "images/1.png", "x": -32, "y": -19 },
+      { "path": "images/2.png", "x": -32, "y": -19 },
+      { "path": "images/3.png", "x": -32, "y": -19 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Roof",
+            "fr-FR": "Toit",
+            "de-DE": "Dach",
+            "es-ES": "Tejado",
+            "it-IT": "Tetto",
+            "nl-NL": "Dak",
+            "sv-SE": "Tak",
+            "ko-KR": "천장",
+            "zh-CN": "屋顶",
+            "zh-TW": "屋頂",
+            "pt-BR": "Teto",
+            "cs-CZ": "Střecha",
+            "ja-JP": "屋根",
+            "pl-PL": "Dach",
+            "ru-RU": "Блок",
+            "eo-ZZ": "Tegmento",
+            "ca-ES": "Teulada",
+            "fi-FI": "Katto"
+        }
+    }
+}
