@@ -33,6 +33,7 @@
 - Updated object: Common Juniper Tree (rct2.scenery_small.tcj)
 - Updated object: Caucasian Fir Tree (rct2.scenery_small.tcf)
 - Updated object: Giraffe Statue (rct2.scenery_small.tgs)
+- Updated object: Roof (rct2.scenery_small.sumrf)
 - Updated object: Roman Colosseum (rct2.scenery_large.scol)
 - Updated object: Roman Column (rct2.scenery_small.trc)
 - Updated object: Colonnade (rct2.scenery_large.scln)
